manifests/syncthing/syncthing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-service
  namespace: syncthing
spec:
  type: NodePort
  selector:
    app: syncthing
  ports:
    - protocol: TCP
      port: 8384
      targetPort: 8384
      nodePort: 30021
